--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic'
           rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="font-awesome/icons-mind/style.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="Plugin/flexSlider/flexslider.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="font-awesome/icons-mind/style.css"  type="text/css">
+    <link rel="stylesheet" href="Plugin/flexSlider/flexslider.css"  type="text/css">
 
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
@@ -117,9 +117,9 @@
                     </div>
                     <div class="col-xs-12 col-sm-12 col-lg-6 col-md-6 text-justify">
                         <p class="text-faded">
-                            &emsp;&emsp;&emsp;&emsp;&emsp; I have done my Master in Computer Science. I will spend most
+                            &emsp;&emsp;&emsp;&emsp;&emsp; I have done my Master in Computer Science. I would like to spend most
                             the time to learn something new in technology and try to understand that technology. I will
-                            attend onlone coding and quiz on programming languages.
+                            attend online coding and quiz on programming languages.
                         </p>
                         <p class="text-faded">
                             I have more than 3 years of software developent experiance and exposure different
