--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <hr class="light">
                 <p class="text-faded">
                     &emsp;&emsp;&emsp;&emsp;&emsp; My name is Madhu and I am a Application developer. I love Maths
-                    and science. I like chalenges in problem solving. I am very big fan for sports, especially in
+                    and science. I like chalenges in problem solving. I am very big fan of sports, especially in
                     Cricket and Volley Ball
                 </p>
                 <div class="row row-eq-height">
