--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <h2 class="section-heading">LET ME INTRODUCE MYSELF...</h2>
                 <hr class="light">
                 <p class="text-faded">
-                    &emsp;&emsp;&emsp;&emsp;&emsp; My name is Madhu and I am a Application developer. I love Maths
+                    &emsp;&emsp;&emsp;&emsp;&emsp; My name is Madhu and I am an Application developer. I love Maths
                     and science. I like chalenges in problem solving. I am very big fan of sports, especially in
                     Cricket and Volley Ball
                 </p>
@@ -117,16 +117,16 @@
                     </div>
                     <div class="col-xs-12 col-sm-12 col-lg-6 col-md-6 text-justify">
                         <p class="text-faded">
-                            &emsp;&emsp;&emsp;&emsp;&emsp; I have done my Master in Computer Science. I would like to spend most
-                            the time to learn something new in technology and try to understand that technology. I will
-                            attend online coding and quiz on programming languages.
+                            &emsp;&emsp;&emsp;&emsp;&emsp; I have done my Master's in Computer Science. I would like to spend most
+                            my time to learn something new in technology and try to understand that technology. I 
+                            participate online coding and quiz on programming languages.
                         </p>
                         <p class="text-faded">
-                            I have more than 3 years of software developent experiance and exposure different
+                            I have more than 3 years of software development experiance and exposure different
                             technologies. Got chance to learn technologies by myself and got ability to implement in
                             real time for user requirement with those technologies. Experianced in
                             <strong class="obrivation">E</strong>nterprice <strong class="obrivation">R</strong>esource
-                            <strong class="obrivation">P</strong>laning business senarios and development for those
+                            <strong class="obrivation">P</strong>laning business scenarios and development for those
                             senarios
                         </p>
                     </div>
