--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                 <h2 class="section-heading">LET ME INTRODUCE MYSELF...</h2>
                 <hr class="light">
                 <p class="text-faded">
-                    &emsp;&emsp;&emsp;&emsp;&emsp; My name is Madhu and I am an Application developer. I love Maths
-                    and science. I like chalenges in problem solving. I am very big fan of sports, especially in
+                    &emsp;&emsp;&emsp;&emsp;&emsp; My name is Madhu and I am an Application developer. I love Math's
+                    and science. I like challenges in problem solving. I am very big fan of sports, especially in
                     Cricket and Volley Ball
                 </p>
                 <div class="row row-eq-height">
@@ -122,12 +122,12 @@
                             participate online coding and quiz on programming languages.
                         </p>
                         <p class="text-faded">
-                            I have more than 3 years of software development experiance and exposure different
+                            I have more than 3 years of software development experience and exposure different
                             technologies. Got chance to learn technologies by myself and got ability to implement in
-                            real time for user requirement with those technologies. Experianced in
-                            <strong class="obrivation">E</strong>nterprice <strong class="obrivation">R</strong>esource
-                            <strong class="obrivation">P</strong>laning business scenarios and development for those
-                            senarios
+                            real time for user requirement with those technologies. Experienced in
+                            <strong class="obrivation">E</strong>nterprise <strong class="obrivation">R</strong>esource
+                            <strong class="obrivation">P</strong>lanning business scenarios and development for those
+                            scenarios
                         </p>
                     </div>
                 </div>
