Adding Sunwest Mortgage experiance

--- a/index.html
+++ b/index.html
@@ -401,6 +401,49 @@
 
                     <div class="panel-group resume" id="work">
 
+                        <div class="resume-item">
+                            <div class="resume-year">
+                                <span class="resume-year">2016 - Now</span>
+                            </div>
+                            <!-- //.resume-year -->
+
+                            <!--<div class="resume-btn">-->
+                            <!--<a href="#work1" data-toggle="collapse" data-parent="#work"></a>-->
+                            <!--</div>-->
+                            <!--&lt;!&ndash; //.resume-btn &ndash;&gt;-->
+
+                            <div class="panel">
+                                <div class="panel-heading">
+                                    <div class="panel-title">
+                                        <h4 class="resume-title">Software Engineer - Sunwest Mortgage</h4>
+                                    </div>
+                                    <!-- //.panel-title -->
+                                </div>
+                                <!-- //.panel-heading -->
+
+                                <div id="work2" class="panel-collapse ">
+                                    <div class="panel-body text-grey text-justify">
+                                        <p>
+                                            Responsibilities:
+                                            <br>
+                                            <span class="bullet-points"><i class="fa fa-hand-o-right fa-fw"></i></span>
+                                            Developing different software for Reverse Mortgage and Servicing for Sun West Mortgage.
+                                            <br>
+                                            <span class="bullet-points"><i class="fa fa-hand-o-right fa-fw"></i></span>
+                                            Designed Web pages, Web forms using Server controls, HTML, JavaScript, JSF and JSPs.
+                                            <br>
+                                            <span class="bullet-points"><i class="fa fa-hand-o-right fa-fw"></i></span>
+                                            Implemented and oops concept and also handled reverse mortgage calculations.
+                                            <br>
+                                        </p>
+                                    </div>
+                                    <!-- //.panel-body -->
+                                </div>
+                                <!-- //.panel-collapse -->
+                            </div>
+                            <!-- //.panel -->
+                        </div>
+                        <!-- //.resume-item -->
 
                         <div class="resume-item">
                             <div class="resume-year">
