--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                             participate online coding and quiz on programming languages.
                         </p>
                         <p class="text-faded">
-                            I have more than 3 years of software development experience and exposure different
+                            I have more than 6 years of software development experience and exposure different
                             technologies. Got chance to learn technologies by myself and got ability to implement in
                             real time for user requirement with those technologies. Experienced in
                             <strong class="obrivation">E</strong>nterprise <strong class="obrivation">R</strong>esource
@@ -401,6 +401,49 @@
 
                     <div class="panel-group resume" id="work">
 
+                        <div class="resume-item">
+                            <div class="resume-year">
+                                <span class="resume-year">2016 - Now</span>
+                            </div>
+                            <!-- //.resume-year -->
+
+                            <!--<div class="resume-btn">-->
+                            <!--<a href="#work1" data-toggle="collapse" data-parent="#work"></a>-->
+                            <!--</div>-->
+                            <!--&lt;!&ndash; //.resume-btn &ndash;&gt;-->
+
+                            <div class="panel">
+                                <div class="panel-heading">
+                                    <div class="panel-title">
+                                        <h4 class="resume-title">Software Engineer - Sunwest Mortgage</h4>
+                                    </div>
+                                    <!-- //.panel-title -->
+                                </div>
+                                <!-- //.panel-heading -->
+
+                                <div id="work2" class="panel-collapse ">
+                                    <div class="panel-body text-grey text-justify">
+                                        <p>
+                                            Responsibilities:
+                                            <br>
+                                            <span class="bullet-points"><i class="fa fa-hand-o-right fa-fw"></i></span>
+                                            Developing different software for Reverse Mortgage and Servicing for Sun West Mortgage.
+                                            <br>
+                                            <span class="bullet-points"><i class="fa fa-hand-o-right fa-fw"></i></span>
+                                            Designed Web pages, Web forms using Server controls, HTML, JavaScript, JSF and JSPs.
+                                            <br>
+                                            <span class="bullet-points"><i class="fa fa-hand-o-right fa-fw"></i></span>
+                                            Implemented and oops concept and also handled reverse mortgage calculations.
+                                            <br>
+                                        </p>
+                                    </div>
+                                    <!-- //.panel-body -->
+                                </div>
+                                <!-- //.panel-collapse -->
+                            </div>
+                            <!-- //.panel -->
+                        </div>
+                        <!-- //.resume-item -->
 
                         <div class="resume-item">
                             <div class="resume-year">
@@ -643,8 +686,8 @@
 
                 <div class="col  col-md-4   col-sm-12 match-height text-center facebook">
 
-                    <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fphoto.php%3Ffbid%3D940197392678707%26set%3Da.147356801962774.20683.100000653640298%26type%3D3&width=500"   style="border:none;" ></iframe>
-                </div>
+                    <!--<iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fphoto.php%3Ffbid%3D940197392678707%26set%3Da.147356801962774.20683.100000653640298%26type%3D3&width=500"   style="border:none;" ></iframe>-->
+                    <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fphoto.php%3Ffbid%3D2631868833511546%26set%3Da.147356801962774%26type%3D3&width=500" width="500" height="600" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>                </div>
                 <!-- //.col-md-12 -->
 
 
