Added Lexisnexis Experience

--- a/index.html
+++ b/index.html
@@ -403,7 +403,63 @@
 
                         <div class="resume-item">
                             <div class="resume-year">
-                                <span class="resume-year">2016 - Now</span>
+                                <span class="resume-year">2019 - Now</span>
+                            </div>
+                            <!-- //.resume-year -->
+
+                            <!--<div class="resume-btn">-->
+                            <!--<a href="#work1" data-toggle="collapse" data-parent="#work"></a>-->
+                            <!--</div>-->
+                            <!--&lt;!&ndash; //.resume-btn &ndash;&gt;-->
+
+                            <div class="panel">
+                                <div class="panel-heading">
+                                    <div class="panel-title">
+                                        <h4 class="resume-title">Software Engineer 3 - LexisNexis</h4>
+                                    </div>
+                                    <!-- //.panel-title -->
+                                </div>
+                                <!-- //.panel-heading -->
+
+                                <div id="work3" class="panel-collapse ">
+                                    <div class="panel-body text-grey text-justify">
+                                        <p>
+                                            Responsibilities:
+                                            <br>
+                                            <span class="bullet-points"><i class="fa fa-hand-o-right fa-fw"></i></span>
+                                            Developing Legal and professional solutions for law firms.
+                                            <br>
+                                            <span class="bullet-points"><i class="fa fa-hand-o-right fa-fw"></i></span>
+                                            Developing different APIs to communicate with No SQL data base
+                                            <br>
+                                            <span class="bullet-points"><i class="fa fa-hand-o-right fa-fw"></i></span>
+                                            Working with AWS to deploy projects and check system health and performance.
+                                            <br>
+                                            <span class="bullet-points"><i class="fa fa-hand-o-right fa-fw"></i></span>
+                                            Design AWS Cloud Formation templates to create SQS, LAMBDA and EC2.Created scripts in Python to process the SQS messages in AWS-Lambda.
+                                            <br>
+                                            <span class="bullet-points"><i class="fa fa-hand-o-right fa-fw"></i></span>
+                                            Initiating alarms in CloudWatch service for monitoring the server's performance, CPU Utilization, disk usage etc. to take recommended actions for better performance.
+                                            <br>
+                                            <span class="bullet-points"><i class="fa fa-hand-o-right fa-fw"></i></span>
+                                            Implemented REST APIs Using Spring and spring boot. Implemented asynchronous method calls handling using multi thread utilization.
+                                            <br>
+                                            <span class="bullet-points"><i class="fa fa-hand-o-right fa-fw"></i></span>
+                                            Memory optimization while handling large amount of data.
+                                            <br>
+                                        </p>
+                                    </div>
+                                    <!-- //.panel-body -->
+                                </div>
+                                <!-- //.panel-collapse -->
+                            </div>
+                            <!-- //.panel -->
+                        </div>
+                        <!-- //.resume-item -->
+
+                        <div class="resume-item">
+                            <div class="resume-year">
+                                <span class="resume-year">2016 - 2019</span>
                             </div>
                             <!-- //.resume-year -->
 
@@ -430,10 +486,28 @@
                                             Developing different software for Reverse Mortgage and Servicing for Sun West Mortgage.
                                             <br>
                                             <span class="bullet-points"><i class="fa fa-hand-o-right fa-fw"></i></span>
-                                            Designed Web pages, Web forms using Server controls, HTML, JavaScript, JSF and JSPs.
+                                            Worked on complete Agile Development, story grooming, estimations, retrospectives and spring planning.
                                             <br>
                                             <span class="bullet-points"><i class="fa fa-hand-o-right fa-fw"></i></span>
-                                            Implemented and oops concept and also handled reverse mortgage calculations.
+                                            Worked with Streams, lambda’s and functional interfaces using Java. services, views, directives navigation through the different status and multiple modules.
+                                            <br>
+                                            <span class="bullet-points"><i class="fa fa-hand-o-right fa-fw"></i></span>
+                                            Used other front-end technologies such as Java 8, JavaScript, JQuery, HTML5, CSS and Bootstrap.
+                                            <br>
+                                            <span class="bullet-points"><i class="fa fa-hand-o-right fa-fw"></i></span>
+                                            Implemented the Project structure based on Spring MVC pattern using Spring Boot.
+                                            <br>
+                                            <span class="bullet-points"><i class="fa fa-hand-o-right fa-fw"></i></span>
+                                            Integrated Spring ORM frameworks Hibernate for database operations with ORACLE.
+                                            <br>
+                                            <span class="bullet-points"><i class="fa fa-hand-o-right fa-fw"></i></span>
+                                            Designed Web pages, Web forms using Server controls, Springs, Hibernates.
+                                            <br>
+                                            <span class="bullet-points"><i class="fa fa-hand-o-right fa-fw"></i></span>
+                                            Programing for mortgage calculations and reports generation.
+                                            <br>
+                                            <span class="bullet-points"><i class="fa fa-hand-o-right fa-fw"></i></span>
+                                            Strong experience in SQL, PL SQL, Tables, Database Links, Materialized Views, Sequences, Stored Procedures, Functions, Triggers, Joins, Unions, Cursors, and Indexes in Oracle.
                                             <br>
                                         </p>
                                     </div>
