Updting My Resume

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                             <div class="panel">
                                 <div class="panel-heading">
                                     <div class="panel-title">
-                                        <h4 class="resume-title">Software Engineer 3 - LexisNexis</h4>
+                                        <h4 class="resume-title">Software Engineering Lead - LexisNexis</h4>
                                     </div>
                                     <!-- //.panel-title -->
                                 </div>
@@ -427,25 +427,37 @@
                                             Responsibilities:
                                             <br>
                                             <span class="bullet-points"><i class="fa fa-hand-o-right fa-fw"></i></span>
-                                            Developing Legal and professional solutions for law firms.
+                                            Led the design and implementation of AWS-based auto-scaling infrastructure for WAM services, ensuring seamless scaling and enhanced system resiliency.
                                             <br>
                                             <span class="bullet-points"><i class="fa fa-hand-o-right fa-fw"></i></span>
-                                            Developing different APIs to communicate with No SQL data base
+                                            Migrated USJI and List services off MarkLogic to improve performance; led List services migration to DocumentDB and USJI Search content migration to Solr.
                                             <br>
                                             <span class="bullet-points"><i class="fa fa-hand-o-right fa-fw"></i></span>
-                                            Working with AWS to deploy projects and check system health and performance.
+                                            Spearheaded the migration of UserPreferences from Oracle to PostgreSQL, optimizing database performance and maintainability.
                                             <br>
                                             <span class="bullet-points"><i class="fa fa-hand-o-right fa-fw"></i></span>
-                                            Design AWS Cloud Formation templates to create SQS, LAMBDA and EC2.Created scripts in Python to process the SQS messages in AWS-Lambda.
+                                            Implemented instance refresh strategies for Auto Scaling groups using CloudFormation templates, ensuring smooth updates with rollback mechanisms.
                                             <br>
                                             <span class="bullet-points"><i class="fa fa-hand-o-right fa-fw"></i></span>
-                                            Initiating alarms in CloudWatch service for monitoring the server's performance, CPU Utilization, disk usage etc. to take recommended actions for better performance.
+                                            Created security group updates through CloudFormation while maintaining existing configurations, optimizing for scalability and security.
                                             <br>
                                             <span class="bullet-points"><i class="fa fa-hand-o-right fa-fw"></i></span>
-                                            Implemented REST APIs Using Spring and spring boot. Implemented asynchronous method calls handling using multi thread utilization.
+                                            Managed and optimized AWS resources, including EC2, Lambda, SQS, and CloudWatch alarms for proactive performance monitoring.
                                             <br>
                                             <span class="bullet-points"><i class="fa fa-hand-o-right fa-fw"></i></span>
-                                            Memory optimization while handling large amount of data.
+                                            Designed and developed REST APIs using Spring Boot and Micronaut microservices for secure, scalable customer-facing applications.
+                                            <br>
+                                            <span class="bullet-points"><i class="fa fa-hand-o-right fa-fw"></i></span>
+                                            Guided the implementation of multi-threaded asynchronous method calls to enhance processing efficiency.
+                                            <br>
+                                            <span class="bullet-points"><i class="fa fa-hand-o-right fa-fw"></i></span>
+                                            Developed and optimized Groovy scripts for Jenkins pipelines, ensuring smooth deployment and CI/CD processes.
+                                            <br>
+                                            <span class="bullet-points"><i class="fa fa-hand-o-right fa-fw"></i></span>
+                                            Led a team of 20+ engineers, mentoring new members and providing guidance on best practices for cloud-native development.
+                                            <br>
+                                            <span class="bullet-points"><i class="fa fa-hand-o-right fa-fw"></i></span>
+                                            Continually engaged with stakeholders to identify business needs and drive tailored engineering solutions.
                                             <br>
                                         </p>
                                     </div>
@@ -706,6 +718,19 @@
             </div>
             <!-- //CIRCLE CHART END -->
 
+            <div class="row">
+                <div class="col-md-4">
+                    <h4>Java</h4>
+                    <div class="progress">
+                        <div class="progress-bar" style="width: 90%;">90%</div>
+                    </div>
+                    <h4>AWS</h4>
+                    <div class="progress">
+                        <div class="progress-bar" style="width: 85%;">85%</div>
+                    </div>
+                    <!-- Add more skills as needed -->
+                </div>
+            </div>
 
         </div>
         <!-- //.section-content -->
@@ -739,22 +764,14 @@
                 </div>
                 <!-- //.col-md-12 -->
 
-                <div class="col  col-md-4  col-sm-12 match-height text-center twitter">
-
-                    <a class="twitter-timeline" href="https://twitter.com/madhireddymadhu" data-widget-id="737495004373880832">Tweets by @madhireddymadhu</a>
-                    <script>
-                        ! function(d, s, id) {
-                            var js, fjs = d.getElementsByTagName(s)[0],
-                                    p = /^http:/.test(d.location) ? 'http' : 'https';
-                            if (!d.getElementById(id)) {
-                                js = d.createElement(s);
-                                js.id = id;
-                                js.src = p + "://platform.twitter.com/widgets.js";
-                                fjs.parentNode.insertBefore(js, fjs);
-                            }
-                            //debugger;
-                        }(document, "script", "twitter-wjs");
-                    </script>
+                <div class="col col-md-4 col-sm-12 match-height text-center linkedin">
+                    <a href="https://www.linkedin.com/in/mmadhireddy" target="_blank" style="text-decoration:none;">
+                        <div style="padding: 30px 0;">
+                            <i class="fa fa-linkedin-square" style="font-size:72px;color:#0077b5;"></i>
+                            <h3 style="margin-top:15px;color:#0077b5;">Connect on LinkedIn</h3>
+                            <p style="color:#333;">linkedin.com/in/mmadhireddy</p>
+                        </div>
+                    </a>
                 </div>
                 <!-- //.col-md-12 -->
 
